# mcpbrain

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DISTRIBUTION.md  INSTALL.md  ORG-BASELINE-ROLLOUT.md  RELEASE-RUNBOOK.md  SELF-DEVELOPING-RECORDS-PLAN.md  cowork-task.md
docs/onboarding/: SCREENSHOTS.md
docs/superpowers/: roadmap-post-0.0.6.md
docs/superpowers/plans/: 2026-06-09-part1-identity-correctness.md  2026-06-09-part2-records-repo.md  2026-06-09-part3-neutral-identity.md  2026-06-09-stale-action-autoclose.md  2026-06-10-guided-onboarding.md  2026-06-10-part3b-crossplatform-cadences.md  2026-06-10-part4-status-probe-layer.md  2026-06-10-part5-distribution.md  2026-06-10-part6-ux.md  2026-06-10-part7-backfill.md  2026-06-10-part8-cowork-cadences.md  2026-06-10-part9-audit-remediation.md  2026-06-11-parallel-enrichment-backfill.md  2026-06-11-plugin-distribution-and-simplification.md  2026-06-15-autonomous-cowork-scheduled-tasks.md  2026-06-16-doctor-and-e2e-test.md  2026-06-16-in-context-recovery.md  2026-06-16-platform-layer.md  2026-06-16-retrieval-integration-windows-onboarding.md  2026-06-22-memory-brain-quality-roadmap.md  2026-06-26-windows-completion.md  2026-06-30-enrichment-efficiency-and-graph-depth.md  2026-07-01-session-3-enrichment-efficiency.md  2026-07-02-interactive-graph-phase1.md  2026-07-02-session-4-brain-review-cadence.md  2026-07-03-graph-drawer-editing.md  2026-07-03-graph-readability.md  2026-07-03-org-baseline-phase-0-foundations.md  2026-07-03-org-baseline-phase-a-ingest-cache.md  2026-07-03-org-baseline-phase-b-org-graph.md  2026-07-03-org-baseline-phase-c-onboarding.md  2026-07-03-series-and-topic-consolidation.md  2026-07-04-a4-cache-enrichment-payload.md  2026-07-04-org-baseline-phase-d-convergence.md  2026-07-09-brain-hygiene.md  2026-07-15-windows-preflight-installer.md  2026-07-17-windows-install-x64-rework.md  2026-07-22-centralize-ingest-cache.md  2026-07-22-expansion-injection-only.md  2026-07-22-expansion-tabular-skip-fleet-flag.md  (+7 more)
docs/superpowers/specs/: 2026-06-08-clickup-sync-design.md  2026-06-09-mcpbrain-productization-design.md  2026-06-09-stale-action-autoclose-design.md  2026-06-10-audit-remediation-design.md  2026-06-10-settings-profile-and-status-design.md  2026-06-11-cowork-skills-and-mcp-context-design.md  2026-06-11-enrichment-launchd-cadence-design.md  2026-06-11-parallel-enrichment-backfill-design.md  2026-06-11-plugin-distribution-design.md  2026-06-16-doctor-and-e2e-test.md  2026-06-16-in-context-recovery.md  2026-06-16-platform-layer.md  2026-06-16-retrieval-integration-windows-onboarding.md  2026-06-18-enrichment-work-queue.md  2026-06-18-temporal-recency-truth.md  2026-06-19-userpromptsubmit-auto-rag-plan.md  2026-06-19-userpromptsubmit-auto-rag.md  2026-07-02-interactive-graph-design.md  2026-07-03-graph-readability-design.md  2026-07-03-org-baseline-personal-overlay-design.md  2026-07-03-series-and-topic-consolidation-design.md  2026-07-04-a4-cache-enrichment-payload-design.md  2026-07-04-org-curator-llm-adjudication-design.md  2026-07-23-enrich-drainer-pool-design.md  (+9 more)
install/: setup.command  setup.ps1  setup.sh
mcpbrain/: __main__.py  agent_errs.py  agents.py  auth.py  auto_enable.py  backup.py  backup_setup.py  capture.py  chunking.py  cli.py  clickup.py  clickup_sync.py  communities.py  community_synth.py  config.py  consolidate.py  consolidation.py  contract.py  control_api.py  control_client.py  cowork_tasks.py  daemon.py  dashboard.py  decay.py  desktop.py  doctor.py  draft.py  draft_critic.py  drain.py  drift_monitor.py  embed.py  embed_voyage.py  enrich.py  enrich_backfill.py  enrich_blocks.py  enrich_eval.py  enrich_prompt.md  extractor_driver.py  extractor_io.py  feedback.py  (+65 more)
mcpbrain/cowork/: __init__.py  enrichment.md  meeting-packs.md  memory-gardener.md
mcpbrain/maintenance/: __init__.py  extractor_driver.py  extractor_io.py  graph_cleanup.py  parallel_backfill.py  salience_backfill.py
mcpbrain/records_templates/: CLAUDE.md  context_identity.md  context_preferences.md  reference_org_context.md  reference_projects.md  reference_systems.md
mcpbrain/routines/: enrich.md  gardener.md  meeting-packs.md  reference-gardener.md
mcpbrain/sync/: __init__.py  calendar.py  cursors.py  drive.py  extractors.py  gmail.py  normalise.py
mcpbrain/wizard/: dashboard.html  graph.html  index.html  register.py
plugin/: .mcp.json  INSTALL.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/agents/: enrich-batch.md
plugin/commands/: enrich.md  gardener.md  install.md  meeting-packs.md  reference-gardener.md
plugin/hooks/: hooks.json
plugin/mcpb/: README.md  manifest.json
plugin/monitors/: monitors.json
plugin/scripts/: install.ps1  install.tests.ps1
tests/: conftest.py  test_a4_enrich_cache.py  test_action_ttl.py  test_agent_errs.py  test_agents.py  test_agents_cadence_xplat.py  test_agents_calendar.py  test_agents_cowork_xplat.py  test_agents_no_linux.py  test_agents_windows_mechanism.py  test_agents_windows_xplat.py  test_auth.py  test_auto_enable.py  test_autoupdate_locksafe.py  test_backfill_exec.py  test_backfill_order.py  test_backfill_progress.py  test_backfill_singleflight.py  test_backup.py  test_backup_records.py  test_backup_setup.py  test_backup_wiring.py  test_block_plumbing.py  test_brain_search_score.py  test_cadence_defaults.py  test_cadence_dispatch.py  test_cadence_gate.py  test_calendar.py  test_calendar_graph.py  test_calendar_sync.py  test_capture_contract.py  test_capture_writer.py  test_change_log.py  test_chunk_metadata.py  test_chunking.py  test_cli.py  test_cli_fleet_report.py  test_cli_utf8.py  test_clickup.py  test_clickup_gating.py  (+229 more)
tests/e2e/: conftest.py  test_full_loop.py
tests/eval/: golden_retrieval_set.yaml  golden_retrieval_set_mcpbrain_candidate.yaml  graders.py  retrieval_eval.jsonl  run_eval.py  seed_gold_candidate.py  test_eval_baseline.py  test_retrieval_quality.py
tests/fixtures/: embed_parity_bge.json  golden.json
tests/helpers/: org_fleet.py  stub_extractor.py
(+22 files in other folders)
