[project]
name = "mcpbrain"
version = "0.7.61"
requires-python = ">=3.12"
dependencies = [
  "sqlite-vec>=0.1.6",
  "fastembed>=0.3",
  "mcp>=1.2",
  "numpy>=1.26",
  "nameparser>=1.1",       # HumanName title-stripping in graph_write.strip_title
  "dateparser>=1.4",       # date inference in graph_write._infer_deadline
  # Binary content extractors for Drive sync
  "pymupdf>=1.23",         # PDF text extraction (fitz)
  "python-docx>=1.1",      # DOCX extraction
  "openpyxl>=3.1",         # XLSX extraction
  "packaging>=23",         # PEP 440 version compare in update.py
  "cryptography>=42",      # Fernet escrow encryption for backup snapshots (Task 5.2)
  "google-api-python-client>=2",  # Drive API client for Shared Drive backup upload (Task 5.3)
  "google-auth>=2",               # google.auth.transport.requests / oauth2.credentials (auth.py)
  "google-auth-oauthlib>=1",      # google_auth_oauthlib OAuth flow (auth.py)
  "google-auth-httplib2>=0.1",    # httplib2 transport for google-auth
  # Graph cadences (communities.py / lint_graph.py import these at module top;
  # the daemon lazy-imports the modules, but an installed tool venv needs them
  # the moment communities_interval_s / lint_interval_s are enabled).
  "networkx>=3",           # entity graph assembly (communities.build_graph)
  "igraph>=0.11",          # Leiden clustering backend (communities.py)
  "leidenalg>=0.10",       # Leiden algorithm (communities.py)
  "rapidfuzz>=3",          # fuzzy name matching (lint_graph near-duplicate check)
  # Menu-bar tray: the daemon and its tray are one system, so the tray's GUI
  # deps ship with every install (same rationale as igraph/leidenalg above —
  # lazy-imported in run_tray(), but the installed venv needs them the moment
  # the tray agent runs). pyobjc is macOS-only (Cocoa backend); pystray is
  # never imported on headless installs, so carrying it there is harmless.
  "pystray>=0.19",
  "pillow>=10",
  "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
  # Note: tesseract is an optional external binary for scanned-PDF OCR.
  # It is NOT a pip dependency — install via OS package manager if needed.
]

[project.scripts]
mcpbrain = "mcpbrain.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8", "pyyaml>=6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Ship only the mcpbrain package. The folder also holds install/ (the macOS and
# Windows installer scripts) and tests/, which flat-layout autodiscovery would
# otherwise flag as extra top-level packages and refuse to build. Pin the
# package list so a clean build from source is deterministic.
[tool.setuptools.packages.find]
include = ["mcpbrain*"]
exclude = ["mcpbrain.maintenance*"]

# Non-.py files that must ship inside the wheel. packages.find ships only .py
# modules, so without this block a clean (non-editable) install is missing the
# onboarding wizard HTML and the example OAuth client, breaking the browser
# wizard served by control_api._serve_wizard.
[tool.setuptools.package-data]
"mcpbrain.wizard" = ["*.html"]
# Ship the wizard assets, the example client, and the SHARED desktop OAuth
# client so a clean `uv tool install` carries it (auth.py finds it via its
# bundled-path lookup, so no env var is needed on any machine).
# wizard/img/ and records_templates/ are NOT importable subpackages (no
# __init__.py), so their data files must be listed under the parent "mcpbrain"
# key as relative-path globs (setuptools package-data globs are relative to the
# owning package's directory). records.py reads records_templates/ via
# Path(__file__).parent, and control_api serves wizard/img/*.png.
"mcpbrain" = [
    "*.json.example",
    "google_oauth_client.json",
    "enrich_prompt.md",
    "routines/*.md",
    "wizard/img/*",
    "records_templates/*",
    "records_templates/**/*",
]
"mcpbrain.cowork" = ["*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: long-running integration tests (real subprocess + model load)",
    "e2e: full sync→prepare→drain→graph loop (CI gate)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8",
    "pyyaml>=6",
]

# Lean lint: ruff's default rules (pyflakes + core pycodestyle) — unused
# imports, undefined names, syntax-level mistakes. Deliberately NO line-length
# rule and NO formatter: the codebase is hand-wrapped (lines run past 100) and
# a mass reformat would bury real diffs. Run: `ruff check .`
[tool.ruff]
target-version = "py312"
extend-exclude = ["build"]

[tool.ruff.lint]
ignore = [
    "E701", "E702",  # one-line `x; y` / `finally: x` compaction is house style
    "E731",          # lambda assignment used deliberately for tiny shims
]

[tool.ruff.lint.per-file-ignores]
# Test files import mid-file to mark task sections; keep that structure.
"tests/*" = ["E402"]
